// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`migrate build build produces .most with full migration chain 1`] = `
"// Version: 4.0.0
{
  "20250101_000000_Init" : {} -> {a : Nat};
  "20250201_000000_AddName" : (old : {a : Nat}) -> {a : Nat; name : Text};
  "20250301_000000_AddEmail" :
    (old : {a : Nat; name : Text}) -> {a : Nat; email : Text; name : Text}
}
actor  {
  stable a : Nat;
  stable email : Text;
  stable name : Text
};
"
`;

exports[`migrate build build with build-limit produces trimmed .most 1`] = `
"// Version: 4.0.0
{
  "20250201_000000_AddName" : (old : {a : Nat}) -> {a : Nat; name : Text};
  "20250301_000000_AddEmail" :
    (old : {a : Nat; name : Text}) -> {a : Nat; email : Text; name : Text}
}
actor  {
  stable a : Nat;
  stable email : Text;
  stable name : Text
};
"
`;

exports[`migrate build build-limit counts next migration as part of the chain 1`] = `
"// Version: 4.0.0
type V2__933402648 = {a : Nat; name : Text};
type V3__40989327 = {a : Nat; email : Text; name : Text};
type V4__364034734 = {email : Text; id : Nat; name : Text};
{
  "20250301_000000_AddEmail" : (old : V2__933402648) -> V3__40989327;
  "20250401_000000_RenameId" : (old : V3__40989327) -> V4__364034734
}
actor  {
  stable email : Text;
  stable id : Nat;
  stable name : Text
};
"
`;

exports[`migrate check check fails without next migration, passes with it 1`] = `
{
  "exitCode": 1,
  "stderr": "src/main.mo:3.1-11.2: Compatibility error [M0169], stable variable \`a\` of version \`20250301_000000_AddEmail\` cannot be implicitly discarded. The variable can only be dropped by an explicit migration function.
See https://docs.internetcomputer.org/languages/motoko/fundamentals/actors/enhanced-multi-migration/
src/main.mo:4.7-4.9: type error [M0267], initial actor requires field \`id\` of type
  Nat; not found in the previous version — write a migration that produces it
src/main.mo:3.1-11.2: Compatibility error [M0169], stable variable \`a\` of the previous version cannot be implicitly discarded. The variable can only be dropped by an explicit migration function.
See https://docs.internetcomputer.org/languages/motoko/fundamentals/actors/enhanced-multi-migration/
✗ Check failed for canister backend (exit code: 1)",
  "stdout": "",
}
`;

exports[`migrate check check fails without next migration, passes with it 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ backend
✓ Stable compatibility check passed for canister 'backend'",
}
`;

exports[`migrate check check with trimming shows reduced chain 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "check Using --all-libs for richer diagnostics
migrations Prepared 2 migration(s) for backend (trimmed from 3)
check Checking canister backend:
<CACHE>moc-wrapper ["src/main.mo","--check","--all-libs","--stable-baseline","deployed.most","--default-persistent-actors","--enhanced-migration=.migrations-backend","-A=M0254"]
✓ backend
✓ Stable compatibility check passed for canister 'backend'",
}
`;

exports[`migrate check check-limit=1 with pending next reports real next-migration path on error 1`] = `
{
  "exitCode": 1,
  "stderr": "next-migration/20250401_000000_RenameId.mo:4.12-4.19: type error [M0050], literal of type
  Text
does not have expected type
  Nat
✗ Check failed for canister backend (exit code: 1)",
  "stdout": "",
}
`;

exports[`migrate check empty chain with pending next reports real next-migration path on error 1`] = `
{
  "exitCode": 1,
  "stderr": "next-migration/20250401_000000_RenameId.mo:4.12-4.19: type error [M0050], literal of type
  Text
does not have expected type
  Nat
✗ Check failed for canister backend (exit code: 1)",
  "stdout": "",
}
`;

exports[`migrate check error inside a chain migration reports its file location 1`] = `
{
  "exitCode": 1,
  "stderr": ".migrations-backend/20250301_000000_AddEmail.mo:4.24-4.26: type error [M0050], literal of type
  Nat
does not have expected type
  Text
✗ Check failed for canister backend (exit code: 1)",
  "stdout": "",
}
`;

exports[`migrate migrate freeze moves the file from next to chain 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Frozen migration: 20250401_000000_RenameId.mo → migrations/",
}
`;

exports[`migrate migrate new creates a migration file with timestamp and template 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "✓ Created migration: next-migration/<TIMESTAMP>_AddPhone.mo",
  "template": "module {
  public func migration(old : {}) : {} {
    {}
  }
}
",
}
`;

exports[`migrate stable check stable check fails when deployed.most is incompatible 1`] = `
{
  "exitCode": 1,
  "stderr": "src/main.mo:3.1-11.2: Compatibility error [M0169], stable variable \`a\` of the previous version cannot be implicitly discarded. The variable can only be dropped by an explicit migration function.
See https://docs.internetcomputer.org/languages/motoko/fundamentals/actors/enhanced-multi-migration/
src/main.mo:3.1-11.2: Compatibility error [M0169], stable variable \`name\` of the previous version cannot be implicitly discarded. The variable can only be dropped by an explicit migration function.
See https://docs.internetcomputer.org/languages/motoko/fundamentals/actors/enhanced-multi-migration/
✗ Check failed for canister backend (exit code: 1)",
  "stdout": "",
}
`;
